--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -51,7 +51,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-+
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -75,7 +74,7 @@
                     android:hint="@string/password"
                     android:inputType="textVisiblePassword"
                     android:maxLines="1"
-                    android:text="@={model.email}"
+                    android:text="@={model.password}"
                     android:textSize="14sp"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
