--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -93,6 +93,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                app:passwordToggleEnabled="true"
                 app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
