Committed by Vishal : Implement Google and Facebook user registration and Take User Id Activity for new user.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/crdGoogle"
                 android:layout_width="match_parent"
@@ -205,13 +206,27 @@
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/popin"
                 android:gravity="center"
-                android:text="apkZube"
+                android:text="@string/apkZube"
                 android:textAlignment="center"
                 android:textColor="@color/apkzube_title"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dp"
+                android:layout_height="10dp"
+                android:indeterminate="true"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:visibility="gone" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
