--- a/app/src/main/res/layout/dialog_sign_in_layout.xml
+++ b/app/src/main/res/layout/dialog_sign_in_layout.xml
@@ -93,16 +93,15 @@
             <TextView
                 android:id="@+id/txtError"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/sign_button_hight"
-                android:fontFamily="@font/popin"
-                android:padding="8dp"
-                android:visibility="gone"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
+                android:fontFamily="@font/popin"
                 android:gravity="center|start"
                 android:textColor="@color/error_text"
-                />
+                android:textSize="14sp"
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/btnDialogSignIn"
